[package]
name = "kd_tree"
version = "0.1.0"
authors = ["zschira <zasc3143@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kd_tree"
crate-type = ["cdylib"]

[features]
default = ["pyo3", "maturin", "numpy", "ndarray"]

[dev-dependencies]
rand = "0.7"

[dependencies]
num-traits = "0.2"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
optional = true

[dependencies.maturin]
version = "0.8.1"
optional = true

[dependencies.numpy]
version = "0.9.0"
optional = true

[dependencies.ndarray]
version = "0.13"
optional = true
